--- a/src/view/result/index.html
+++ b/src/view/result/index.html
@@ -44,8 +44,8 @@
 			</div>
 
 			<div class="container_login">
-				<label><b>Usuário</b></label>
-				<input type="text" placeholder="Entre com nome de usuário" name="uname" required>
+				<label><b>Email</b></label>
+				<input type="text" placeholder="Entre com o email" name="email" required>
 
 				<label><b>Senha</b></label>
 				<input type="password" placeholder="Entre com a senha" name="psw" required>
@@ -68,8 +68,8 @@
 			</div>
 
 			<div class="container_login">
-				<label><b>Usuário</b></label>
-				<input type="text" placeholder="Entre com nome de usuário" name="uname" required>
+				<label><b>Nome</b></label>
+				<input type="text" placeholder="Entre com seu nome" name="username" required>
 
 				<label><b>Senha</b></label>
 				<input type="password" placeholder="Entre com a senha" name="psw" required>
