--- a/mobilizations/app/views/layouts/application.html.erb
+++ b/mobilizations/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   </head>
 
   <body>
-  	oaslr
     <%= yield %>
+    <script type="text/javascript">
+      <%= yield :js %>
+    </script>
   </body>
 </html>
