Adicionar metas funcional

--- a/mobilizations/app/views/layouts/application.html.erb
+++ b/mobilizations/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <script src="assets/jquery.min.js"></script>
+    <script src="assets/bootstrap.min.js"></script>
+    <script src="assets/mobilizations.js"></script>
     <%= yield %>
     <script type="text/javascript">
       <%= yield :js %>
