Metas aparecendo na tela principal

--- a/mobilizations/app/assets/stylesheets/login.css
+++ b/mobilizations/app/assets/stylesheets/login.css
@@ -117,3 +117,35 @@ span.psw {
        width: 100%;
     }
 }
+
+.meta-button {
+	background-color:transparent;
+	-webkit-border-top-left-radius:0px;
+	-moz-border-radius-topleft:0px;
+	border-top-left-radius:0px;
+	-webkit-border-top-right-radius:0px;
+	-moz-border-radius-topright:0px;
+	border-top-right-radius:0px;
+	-webkit-border-bottom-right-radius:0px;
+	-moz-border-radius-bottomright:0px;
+	border-bottom-right-radius:0px;
+	-webkit-border-bottom-left-radius:0px;
+	-moz-border-radius-bottomleft:0px;
+	border-bottom-left-radius:0px;
+	text-indent:0;
+	border:1px solid inherit;
+	display:inline-block;
+	color:inherit;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	font-style:normal;
+	height:24px;
+	line-height:24px;
+	width:24px;
+	text-decoration:none;
+	text-align:center;
+}.meta-button:active {
+	position:relative;
+	top:1px;
+}
