--- a/mobilizations/app/views/meta/new.html.erb
+++ b/mobilizations/app/views/meta/new.html.erb
@@ -9,6 +9,12 @@
         <%= f.label :time_limit %>:
         <%= f.datetime_field :time_limit %><br />
 
+        <%= f.label :limit %>:
+        <%= f.text_field :limit %><br />
+
+        <%= f.label :unity %>:
+        <%= f.text_field :unity %><br />
+
         <%= f.submit %>
     <% end %>
     <div id="error-message"> </div>
