--- a/mobilizations/app/views/home/index.html.erb
+++ b/mobilizations/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="assets/navbar.css">
 </head>
 
-<body>
+<bdiv>
 	<!--Navbar-->
     <nav id="header" class="navbar navbar-fixed-top">
 		<div id="header-container" class="container navbar-container">
@@ -183,16 +183,18 @@
 	<div class="container-right col-lg-5 col-md-5" id="stayFixed">
 		<div class="row">
 			<div class="meta-tittle">
-				<h3><strong>Metas</strong> </h3>
+				<h3><strong>Metas</strong></h3>
+				<a href="/meta/new" class="meta-button">+</a>
 			</div>
-			<p><h4 class="timeline-title">Arrecadar R$1.000</h4><p>
+			<% if @metas.length <= 0 %>
+			<p><h4 class="timeline-title">Não há metas ativas</h4></p>
+			<%else @metas.each do |m| %>
+			<p><h4 class="timeline-title"><%=m.title %></h4></p>
 			<div class="progress">
-				<div class="progress-bar progress-bar-success progress-bar-striped active" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
+				<div class="progress-bar progress-bar-success progress-bar-striped active" aria-valuenow="<%= m.progresso%>" aria-valuemin="0" aria-valuemax="<%= m.limit%>" style="width: 50%;">50%</div>
 			</div>
-			<p><h4 class="timeline-title">Plantar 50 árvores</h4><p>
-			<div class="progress">
-				<div class="progress-bar progress-bar-success progress-bar-striped active" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">30%</div>
-			</div>                        
+			<% end %> 
+			<% end %>                    
 		</div>
 		<div class="row">
 			<div class="meta-tittle">
