--- a/mobilizations/app/views/home/index.html.erb
+++ b/mobilizations/app/views/home/index.html.erb
@@ -66,7 +66,7 @@
 				<input type="password" placeholder="Entre com a senha" name="login[password]" required>
 
 				<div id="login-messages"> </div>
-				<button type="submit">Login</button>
+				<button id="button-login" type="submit">Login</button>
 				<label><input type="checkbox" checked="checked" name="login[remember]">Lembrar</label>
 			</div>
 			<div class="container_login" style="background-color:#f1f1f1">
